# tai-mcp-memory

./: .env.example  .gitignore  README.md  agents.md  background_info.md  config.py  development_plan.md  memory_server.py  pyproject.toml  requirements.txt  restore_memory.py
.github/: dependabot.yml
data/: memory.sqlite
data/chroma/: chroma.sqlite3
db/: __init__.py  chroma_manager.py  sqlite_connection.py  sqlite_manager.py
db/memory_db/chroma/: chroma.sqlite3
docs/: bg_info_db.md  bg_info_memory_service.md  bg_info_root.md  bg_info_tests.md  bg_info_utils.md  database_schema.md  development_plan.md  roadmap.md
memory_service/: auxiliary_memory_service.py  core_memory_service.py
tests/: conftest.py  test_auxiliary_memory_service.py  test_backup.py  test_backup_race_condition.py  test_chroma_manager.py  test_core_memory_service.py  test_deletion_fix.py  test_openrouter_config.py  test_return_shape.py  test_sqlite_fk_and_topic.py  test_sqlite_manager.py  test_summarizer.py  test_update_topic_cascade_bug.py
utils/: __init__.py  backup.py  helpers.py  open_router_client.py  summarizer.py
