[project]
name = "tai-mcp-memory"
version = "0.1.0"
description = "MCP Memory Server with persistent, semantic memory for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.23.0",
    "python-dotenv~=1.2.1",
    "chromadb~=1.3.5",
    "pydantic~=2.12.5",
    "openai~=1.109.1",
]
